# fg

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  license.txt  readme.md
cmake/: assign_source_group.cmake  import_library.cmake
include/fg/: actualize.hpp  builder.hpp  framegraph.hpp  node.hpp  realize.hpp  registry.hpp  render_resource.hpp  render_task.hpp  render_task_base.hpp  render_task_builder.hpp  render_task_resources.hpp  resource.hpp  resource_base.hpp  resource_registry.hpp  types.hpp
tests/: framegraph_test.cpp
